--- a/index.html
+++ b/index.html
@@ -19,56 +19,57 @@
 <body>
 
     <!-- Navbar -->
-    <header class="">
-        <!-- Navbar -->
-          <nav class="navbar navbar-expand-lg navbar-light">
-              <div class="container">
-                <a class="navbar-brand logo" href="index.html">Luciana Gotta</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Proyectos</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Press</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Sígueme</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-          </nav>
-  
-          <!-- Carousel -->
-          <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-              </div>
-              <div class="carousel-item">
-              </div>
-              <div class="carousel-item">
-              </div>
-            </div>
-            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+    <header class="header">
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container">
+            <a class="navbar-brand logo" href="index.html">Luciana Gotta</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button> -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Proyectos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Press</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Sígueme</a>
+                </li>
+              </ul>
+            </div>
           </div>
+      </nav>
     </header>
+
+    <!-- Carousel -->
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <!-- <img src="./img/01-frente.jpg" class="img-fluid d-block w-100 carousel_img-frente" alt="Casa SG"> -->
+        </div>
+        <div class="carousel-item">
+          <!-- <img src="./img/01-vista.jpg" class="img-fluid carousel_img-vista d-block w-100" alt="..."> -->
+        </div>
+        <div class="carousel-item">
+          <!-- <img src="./img/lt10.jpg" class="img-fluid carousel_img-lt10 d-block w-100" alt="..."> -->
+        </div>
+      </div>
+    </div>
+    
 
 
 
@@ -77,7 +78,7 @@
     <script>
       var myCarousel = document.querySelector('#myCarousel')
       var carousel = new bootstrap.Carousel(myCarousel, {
-        interval: 1000,
+        interval: 500,
         wrap: true
       })
     </script>
