--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </head>
 <body>
 
-    <!-- Navbar -->
+    <!-- Header -->
     <header class="header">
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container">
+          <div class="container navbar_container">
             <a class="navbar-brand logo" href="index.html">Luciana Gotta</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -30,10 +30,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Proyectos</a>
@@ -42,7 +42,7 @@
                   <a class="nav-link" href="#">Press</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Sígueme</a>
+                  <a class="nav-link px-0" href="#">Sígueme</a>
                 </li>
               </ul>
             </div>
@@ -51,21 +51,22 @@
     </header>
 
     <!-- Carousel -->
-    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
+    <div id="myCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <!-- <img src="./img/01-frente.jpg" class="img-fluid d-block w-100 carousel_img-frente" alt="Casa SG"> -->
+        <div class="carousel-item active" data-bs-interval="3000">
+          <div class="overlay-image0">
+            <!-- Image background -->
+          </div>
         </div>
-        <div class="carousel-item">
-          <!-- <img src="./img/01-vista.jpg" class="img-fluid carousel_img-vista d-block w-100" alt="..."> -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image1">
+             <!-- Image background -->
+          </div>
         </div>
-        <div class="carousel-item">
-          <!-- <img src="./img/lt10.jpg" class="img-fluid carousel_img-lt10 d-block w-100" alt="..."> -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image2">
+             <!-- Image background -->
+          </div>
         </div>
       </div>
     </div>
@@ -74,14 +75,6 @@
 
 
     
-    
-    <script>
-      var myCarousel = document.querySelector('#myCarousel')
-      var carousel = new bootstrap.Carousel(myCarousel, {
-        interval: 500,
-        wrap: true
-      })
-    </script>
 
     <!-- Bootstrap JS -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script> -->
