--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Proyectos</a>
+                <a class="nav-link" href="proyect.html">Proyectos</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="#">Press</a>
@@ -68,19 +68,24 @@
                 </p>
 
                 <div class="button_container">
-                    <button class="btn btn-outline-dark button_container-text">Contact</button>
+                    <button class="btn btn-outline-dark button_container-text desktop" type="button">Contact</button>
+                    <button class="btn btn-block btn-outline-dark button_container-text mobile" type="button">Contact</button>
                     <a href="https://www.instagram.com/lucianagottaarq/" class="button_container-iconContainer" target="_blank"><i class="fab fa-instagram button_container-icon"></i></a>
                 </div>
             </div>
         </div>
-        <div class="row about_copy">
-            <div class="col-12 text-center">
-                <p class="about_copy-text">Copyright 2020 / Arq. <b>Luciana Gotta</b> / <b>E-mail:</b> hola@gotta.com</p>
-            </div>
-        </div>
-    </div>
     
-
+    
+        <!-- Footer -->
+        <footer>
+            <div class="row about_copy">
+                <div class="col-12 p-0 text-center">
+                    <p class="about_copy-text desktop">Copyright 2020 / Arq. <b>Luciana Gotta</b> / <b>E-mail:</b> hola@gotta.com</p>
+                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2020 / Arq. <b>Luciana Gotta</b> / <b>E-mail:</b> hola@gotta.com</p>
+                </div>
+            </div>
+        </footer>
+    </div>
 
 
     <!-- Bootstrap JS -->
