--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Proyectos</a>
+                  <a class="nav-link" href="proyect.html">Proyectos</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Press</a>
