agregado de imagenes home, remplazo img proyect y comenzando press

--- a/about.html
+++ b/about.html
@@ -22,23 +22,26 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container navbar_container">
-            <a class="navbar-brand logo" href="index.html">Luciana Gotta</a>
+            <a class="navbar-brand logo" href="index.html">
+                <img class="logo_icon desktop" src="./img/logo-1.png" alt="Luciana Gotta">
+                <img class="logo_icon mobile" src="./img/logo-2.png" alt="Luciana Gotta">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="proyect.html">Proyectos</a>
+                <a class="nav-link" href="./proyect.html">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Press</a>
+                <a class="nav-link" href="./press.html">Press</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link px-0" href="#">Sígueme</a>
@@ -54,7 +57,7 @@
     <div class="container about_container">
         <div class="row about_row">
             <div class="col-12 col-lg-6 about_img">
-                <img class="img-fluid" src="./img/luciana.jpg" alt="Luciana Gotta">
+                <img class="img-fluid" src="./img/lucianaProfile.jpg" alt="Luciana Gotta">
             </div>
             <div class="col-12 col-lg-6 about_text">
                 <h5 class="about_title">Biografía</h5>
