--- a/index.html
+++ b/index.html
@@ -23,23 +23,26 @@
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container navbar_container">
-            <a class="navbar-brand logo" href="index.html">Luciana Gotta</a>
+            <a class="navbar-brand logo" href="index.html">
+              <img class="logo_icon desktop" src="./img/logo-1.png" alt="Luciana Gotta">
+              <img class="logo_icon mobile" src="./img/logo-2.png" alt="Luciana Gotta">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="proyect.html">Proyectos</a>
+                  <a class="nav-link" href="./proyect.html">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Press</a>
+                  <a class="nav-link" href="./press.html">Press</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link px-0" href="#">Sígueme</a>
@@ -53,27 +56,75 @@
     <!-- Carousel -->
     <div id="myCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
+        <!-- image 0 -->
         <div class="carousel-item active" data-bs-interval="3000">
           <div class="overlay-image0">
             <!-- Image background -->
           </div>
         </div>
+        <!-- image 1 -->
         <div class="carousel-item" data-bs-interval="3000">
           <div class="overlay-image1">
              <!-- Image background -->
           </div>
         </div>
+        <!-- image 2 -->
         <div class="carousel-item" data-bs-interval="3000">
           <div class="overlay-image2">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 3 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image3">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 4 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image4">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 5 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image5">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 6 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image6">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 7 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image7">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 8 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image8">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 9 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image9">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 10 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image10">
              <!-- Image background -->
           </div>
         </div>
       </div>
     </div>
     
-
-
-
     
 
     <!-- Bootstrap JS -->
