--- a/proyect.html
+++ b/proyect.html
@@ -22,23 +22,26 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container navbar_container">
-                <a class="navbar-brand logo" href="index.html">Luciana Gotta</a>
+                <a class="navbar-brand logo" href="index.html">
+                    <img class="logo_icon desktop" src="./img/logo-1.png" alt="Luciana Gotta">
+                    <img class="logo_icon mobile" src="./img/logo-2.png" alt="Luciana Gotta">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Proyectos</a>
+                    <a class="nav-link" href="./proyect.html">Proyectos</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Press</a>
+                    <a class="nav-link" href="./press.html">Press</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link px-0" href="#">Sígueme</a>
@@ -49,20 +52,21 @@
         </nav>
     </header>
 
+    <!-- Proyects -->
     <div class="container">
         <!-- Gallery -->
         <div class="gallery_container">
             <div class="pic gallery_img1">
-                <img class="img-fluid img"  src="./img/gallery/viviendaSG.jpg" alt="Vivienda SG">
+                <img class="img-fluid img"  src="./img/gallery/viviendalt10_min.jpg" alt="Vivienda LT10">
             </div>
             <div class="pic gallery_img2">
-                <img class="img-fluid img"  src="./img/gallery/wyndham.jpg" alt="Hotel Wyndham">
+                <img class="img-fluid img"  src="./img/gallery/MM.jpg" alt="Vivienda MM">
             </div>
             <div class="pic gallery_img3">
-                <img class="img-fluid img"  src="./img/gallery/viviendaMM.jpg" alt="Vivienda MM">
+                <img class="img-fluid img"  src="./img/gallery/SG.jpg" alt="Vivienda SG">
             </div>
             <div class="pic gallery_img4">
-                <img class="img-fluid img"  src="./img/gallery/viviendalt10.jpg" alt="Vivienda LT10">
+                <img class="img-fluid img"  src="./img/gallery/Wyndham.jpg" alt="Hotel Wyndham">
             </div>
         </div>
 
