Construccion tarjetas proyectos y press

--- a/about.html
+++ b/about.html
@@ -43,8 +43,13 @@
                 <li class="nav-item">
                 <a class="nav-link" href="./press.html">Press</a>
                 </li>
-                <li class="nav-item">
-                <a class="nav-link px-0" href="#">Sígueme</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle px-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Sígueme
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="https://www.instagram.com/lucianagottaarq/" target="_blank">Instagram</a></li>
+                    </ul>
                 </li>
             </ul>
             </div>
@@ -83,8 +88,8 @@
         <footer>
             <div class="row about_copy">
                 <div class="col-12 p-0 text-center">
-                    <p class="about_copy-text desktop">Copyright 2020 / Arq. <b>Luciana Gotta</b> / <b>E-mail:</b> hola@gotta.com</p>
-                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2020 / Arq. <b>Luciana Gotta</b> / <b>E-mail:</b> hola@gotta.com</p>
+                    <p class="about_copy-text desktop">Copyright 2020 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2020 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
                 </div>
             </div>
         </footer>
