--- a/index.html
+++ b/index.html
@@ -44,9 +44,14 @@
                 <li class="nav-item">
                   <a class="nav-link" href="./press.html">Press</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link px-0" href="#">Sígueme</a>
-                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle px-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Sígueme
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="https://www.instagram.com/lucianagottaarq/" target="_blank">Instagram</a></li>
+                  </ul>
+              </li>
               </ul>
             </div>
           </div>
