--- a/press.html
+++ b/press.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Styles CSS -->
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/press.css">
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/afecc65938.js" crossorigin="anonymous"></script>
     <!-- Goolgle Font -->
@@ -43,22 +43,68 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./press.html">Press</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link px-0" href="#">Sígueme</a>
-                    </li>
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="./press.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Press
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle px-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Sígueme
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                            <li><a class="dropdown-item" href="#">Instagram</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item text_sigueme-ig" href="https://www.instagram.com/lucianagottaarq/" target="_blank">Instagram</a></li>
                         </ul>
-                    </li> -->
+                    </li>
                 </ul>
                 </div>
             </div>
         </nav>
     </header>
+
+    <!-- Press -->
+    <div class="container">
+        <!-- Gallery Press -->
+        <div class="gallery_container">
+            <!-- Clarin ARQ -->
+            <div class="image_container">
+                <img class="image_img" src="./img/press/REVISTA CLARIN ARQ TAPA.jpg" alt="Clarín Arquitectura">
+                <div class="image_overlay image_overlay-solid">
+                    <h2 class="image_title">Clarín ARQ</h2>
+                </div>
+            </div>
+
+            <!-- Clarin.com -->
+            <div class="image_container">
+                <img class="image_img" src="./img/press/clarin.com.jpg" alt="clarín digital">
+                <div class="image_overlay image_overlay-solid">
+                    <h2 class="image_title">clarín.com</h2>
+                </div>
+            </div>
+
+            <!-- Capba -->
+            <div class="image_container">
+                <img class="image_img" src="./img/press/REVISTA CAPBA TAPA.jpg" alt="Revista CAPBA">
+                <div class="image_overlay image_overlay-solid">
+                    <h2 class="image_title">Revista Capba</h2>
+                </div>
+            </div>
+
+            <!-- Revista Capba.com -->
+            <div class="image_container">
+                <img class="image_img" src="./img/press/revista_capba.jpg" alt="Revista CAPBA Digital">
+                <div class="image_overlay image_overlay-solid">
+                    <h2 class="image_title">Capba digital</h2>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Footer -->
+        <footer>
+            <div class="row about_copy">
+                <div class="col-12 p-0 text-center">
+                    <p class="about_copy-text desktop">Copyright 2020 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2020 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                </div>
+            </div>
+        </footer>
+    </div>
 
 
 
