arregle la ruta del hotel wyndham

--- a/proyect.html
+++ b/proyect.html
@@ -87,7 +87,7 @@
 
             <!-- Hotel Wyndham -->
             <div class="image_container">
-                <img class="image_img" src="./img/gallery/Wyndham.jpg" alt="Hotel Wyndham">
+                <img class="image_img" src="./img/gallery/wyndham.jpg" alt="Hotel Wyndham">
                 <div class="image_overlay image_overlay-solid">
                     <h2 class="image_title">Hotel Wyndham</h2>
                 </div>
