carousel mobile con imagenes distintas. Menu home responsive background. Detalle de color en mobile about title

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="./index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./about.html">About</a>
@@ -58,8 +58,8 @@
       </nav>
     </header>
 
-    <!-- Carousel -->
-    <div id="myCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <!-- Carousel Desktop -->
+    <div id="myCarousel" class="carousel slide carousel-fade desktop" data-bs-ride="carousel">
       <div class="carousel-inner">
         <!-- image 0 -->
         <div class="carousel-item active" data-bs-interval="3000">
@@ -124,6 +124,66 @@
         <!-- image 10 -->
         <div class="carousel-item" data-bs-interval="3000">
           <div class="overlay-image10">
+             <!-- Image background -->
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Carousel Mobile -->
+    <div id="myCarousel" class="carousel slide carousel-fade mobile" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <!-- image 0 -->
+        <div class="carousel-item active" data-bs-interval="3000">
+          <div class="overlay-image0-mobile">
+            <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 1 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image1-mobile">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 2 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image2-mobile">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 3 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image3-mobile">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 4 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image4-mobile">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 5 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image5-mobile">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 6 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image6-mobile">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 7 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image7-mobile">
+             <!-- Image background -->
+          </div>
+        </div>
+        <!-- image 8 -->
+        <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image8-mobile">
              <!-- Image background -->
           </div>
         </div>
