--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
           </div>
         </div>
         <!-- image 4 -->
-        <div class="carousel-item" data-bs-interval="3000">
-          <div class="overlay-image4">
+        <!-- <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image4"> -->
              <!-- Image background -->
-          </div>
-        </div>
+          <!-- </div>
+        </div> -->
         <!-- image 5 -->
         <div class="carousel-item" data-bs-interval="3000">
           <div class="overlay-image5">
@@ -104,29 +104,29 @@
           </div>
         </div>
         <!-- image 7 -->
-        <div class="carousel-item" data-bs-interval="3000">
-          <div class="overlay-image7">
+        <!-- <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image7"> -->
              <!-- Image background -->
-          </div>
-        </div>
+          <!-- </div>
+        </div> -->
         <!-- image 8 -->
-        <div class="carousel-item" data-bs-interval="3000">
-          <div class="overlay-image8">
+        <!-- <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image8"> -->
              <!-- Image background -->
-          </div>
-        </div>
+          <!-- </div>
+        </div> -->
         <!-- image 9 -->
-        <div class="carousel-item" data-bs-interval="3000">
-          <div class="overlay-image9">
+        <!-- <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image9"> -->
              <!-- Image background -->
-          </div>
-        </div>
+          <!-- </div>
+        </div> -->
         <!-- image 10 -->
-        <div class="carousel-item" data-bs-interval="3000">
-          <div class="overlay-image10">
+        <!-- <div class="carousel-item" data-bs-interval="3000">
+          <div class="overlay-image10"> -->
              <!-- Image background -->
-          </div>
-        </div>
+          <!-- </div>
+        </div> -->
       </div>
     </div>
 
@@ -193,8 +193,14 @@
     
 
     <!-- Bootstrap JS -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script> -->
+
+    <script type="text/javascript" data-sqs-type="imageloader-bootstrapper">
+    (function() {if(window.ImageLoader) { window.ImageLoader.bootstrap({}, document); }})();
+    </script>
+    <script>Squarespace.afterBodyLoad(Y);</script>
+
 </body>
 </html>
