Realizando la galeria de imagenes de cada proyecto

--- a/proyect.html
+++ b/proyect.html
@@ -62,12 +62,13 @@
         <!-- Gallery -->
         <div class="gallery_container">
             <!-- LT10 -->
-            <div class="image_container">
+            <a href="./Proyectos/viviendaLT10.html" class="image_container">
                 <img class="image_img" src="./img/gallery/viviendalt10_min.jpg" alt="Vivienda LT10">
                 <div class="image_overlay image_overlay-solid">
                     <h2 class="image_title">Vivienda LT10</h2>
                 </div>
-            </div>
+            </a>
+            
 
             <!-- Vivienda MM -->
             <div class="image_container">
