--- a/Proyectos/viviendaLT10.html
+++ b/Proyectos/viviendaLT10.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <!-- Light Gallery -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css">
     <!-- Styles CSS -->
     <link rel="stylesheet" href="./styles/viviendaLT.css">
     <!-- Fontawesome -->
@@ -88,44 +86,139 @@
 
         <!-- Galeria -->
         <div class="row my-5 gallery">
+
+             <!-- 01 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
-                <a href="../Proyectos/viviendaLT10/1.jpg" class="fancybox" >
-                    <img src="../Proyectos/viviendaLT10/1.jpg" alt="" width="100%" height="100%">
-                </a>
+                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda01">
+                    <img src="../Proyectos/viviendaLT10/1.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
             </div>
+
+            <!-- Modal 01-->
+            <div class="modal fade" id="vivienda01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/1.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+           
+            <!-- 02 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
-                <a href="../Proyectos/viviendaLT10/2.jpg" class="fancybox" data-fancybox="lt10">
-                    <img src="../Proyectos/viviendaLT10/2.jpg" alt="" width="100%" height="100%">
-                </a>
+                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda02" >
+                    <img src="../Proyectos/viviendaLT10/2.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
             </div>
+
+             <!-- Modal 02-->
+             <div class="modal fade" id="vivienda02" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/2.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+             <!-- 03 -->
+            <div class="col-12 col-lg-4 my-3 col_gallery"> 
+                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda03" >
+                    <img src="../Proyectos/viviendaLT10/3.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
+            </div>
+
+             <!-- Modal 03-->
+             <div class="modal fade" id="vivienda03" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/3.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 04 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
-                <a href="../Proyectos/viviendaLT10/3.jpg" class="fancybox" data-fancybox="lt10">
-                    <img src="../Proyectos/viviendaLT10/3.jpg" alt="" width="100%" height="100%">
-                </a>
+                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda04" >
+                    <img src="../Proyectos/viviendaLT10/4.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
             </div>
+
+            <!-- Modal 04-->
+            <div class="modal fade" id="vivienda04" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/4.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 05 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
-                <a href="../Proyectos/viviendaLT10/4.jpg" class="fancybox" data-fancybox="lt10">
-                    <img src="../Proyectos/viviendaLT10/4.jpg" alt="" width="100%" height="100%">
-                </a>
+                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda05" >
+                    <img src="../Proyectos/viviendaLT10/5.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
             </div>
+
+            <!-- Modal 05-->
+            <div class="modal fade" id="vivienda05" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/5.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 06 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
-                <a href="../Proyectos/viviendaLT10/5.jpg" class="fancybox" data-fancybox="lt10">
-                    <img src="../Proyectos/viviendaLT10/5.jpg" alt="" width="100%" height="100%">
-                </a>
+                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda06" >
+                    <img src="../Proyectos/viviendaLT10/6.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
+            </div> 
+
+            <!-- Modal 06-->
+            <div class="modal fade" id="vivienda06" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/6.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-12 col-lg-4 my-3 col_gallery">
-                <a href="../Proyectos/viviendaLT10/6.jpg" class="fancybox" data-fancybox="lt10">
-                    <img src="../Proyectos/viviendaLT10/6.jpg" alt="" width="100%" height="100%">
-                </a>
-            </div>
+
         </div>
 
 
-
-
+        <!-- Footer -->
         <div class="row footer">
             <div class="col-12">
-                <!-- Footer -->
                 <footer>
                     <div class="row about_copy">
                         <div class="col-12 p-0 text-center">
@@ -143,11 +236,5 @@
      <!-- Bootstrap JS -->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
-     <!-- Light Gallery JS -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
-
-    <script>
-        lightGallery(document.querySelector('.gallery'))
-    </script>
 </body>
 </html>
