creación de ficha y galería de viviendas MM - SG - hotel wyndham

--- a/proyect.html
+++ b/proyect.html
@@ -22,7 +22,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container navbar_container">
-                <a class="navbar-brand logo" href="index.html">
+                <a class="navbar-brand logo" href="./index.html">
                     <img class="logo_icon desktop" src="./img/logo-1.png" alt="Luciana Gotta">
                     <img class="logo_icon mobile" src="./img/logo-2.png" alt="Luciana Gotta">
                 </a>
@@ -71,28 +71,28 @@
             
 
             <!-- Vivienda MM -->
-            <div class="image_container">
+            <a href="./Proyectos/viviendaMM.html" class="image_container">
                 <img class="image_img" src="./img/gallery/MM.jpg" alt="Vivienda MM">
                 <div class="image_overlay image_overlay-solid">
                     <h2 class="image_title">Vivienda MM</h2>
                 </div>
-            </div>
+            </a>
 
             <!-- Vivienda SG -->
-            <div class="image_container">
+             <a href="./Proyectos/viviendaSG.html" class="image_container">
                 <img class="image_img" src="./img/gallery/SG.jpg" alt="Vivienda SG">
                 <div class="image_overlay image_overlay-solid">
                     <h2 class="image_title">Vivienda SG</h2>
                 </div>
-            </div>
+            </a>
 
             <!-- Hotel Wyndham -->
-            <div class="image_container">
+             <a href="./Proyectos/wyndham.html" class="image_container">
                 <img class="image_img" src="./img/gallery/wyndham.jpg" alt="Hotel Wyndham">
                 <div class="image_overlay image_overlay-solid">
                     <h2 class="image_title">Hotel Wyndham</h2>
                 </div>
-            </div>
+            </a>
         </div>
 
 
