--- a/Proyectos/viviendaLT10.html
+++ b/Proyectos/viviendaLT10.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Styles CSS -->
-    <link rel="stylesheet" href="./styles/viviendaLT.css">
+    <link rel="stylesheet" href="./styles/viviendas.css">
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/afecc65938.js" crossorigin="anonymous"></script>
     <!-- Goolgle Font -->
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container navbar_container">
-            <a class="navbar-brand logo" href="index.html">
+            <a class="navbar-brand logo" href="../index.html">
             <img class="logo_icon desktop" src="../img/logo-1.png" alt="Luciana Gotta">
             <img class="logo_icon mobile" src="../img/logo-2.png" alt="Luciana Gotta">
             </a>
@@ -87,13 +87,12 @@
         <!-- Galeria -->
         <div class="row my-5 gallery">
 
-             <!-- 01 -->
+             <!-- ============== 01 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda01">
                     <img src="../Proyectos/viviendaLT10/1.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div>
-
             <!-- Modal 01-->
             <div class="modal fade" id="vivienda01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
@@ -108,7 +107,7 @@
                 </div>
             </div>
            
-            <!-- 02 -->
+            <!-- =============== 02 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda02" >
                     <img src="../Proyectos/viviendaLT10/2.jpg" alt="Vivienda LT10" width="100%" height="100%">
@@ -129,7 +128,7 @@
                 </div>
             </div>
 
-             <!-- 03 -->
+             <!-- =============== 03 -->
             <div class="col-12 col-lg-4 my-3 col_gallery"> 
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda03" >
                     <img src="../Proyectos/viviendaLT10/3.jpg" alt="Vivienda LT10" width="100%" height="100%">
@@ -150,7 +149,7 @@
                 </div>
             </div>
 
-            <!-- 04 -->
+            <!-- ================ 04 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda04" >
                     <img src="../Proyectos/viviendaLT10/4.jpg" alt="Vivienda LT10" width="100%" height="100%">
@@ -171,13 +170,12 @@
                 </div>
             </div>
 
-            <!-- 05 -->
+            <!-- ================ 05 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda05" >
                     <img src="../Proyectos/viviendaLT10/5.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div>
-
             <!-- Modal 05-->
             <div class="modal fade" id="vivienda05" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
@@ -192,13 +190,12 @@
                 </div>
             </div>
 
-            <!-- 06 -->
+            <!-- ================ 06 -->
             <div class="col-12 col-lg-4 my-3 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda06" >
                     <img src="../Proyectos/viviendaLT10/6.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
             </div> 
-
             <!-- Modal 06-->
             <div class="modal fade" id="vivienda06" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
@@ -212,6 +209,167 @@
                     </div>
                 </div>
             </div>
+
+            <!-- ================= 07 Plano -->
+            <div class="col-12 col-lg-4 my-3 col_gallery">
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina01" >
+                    <img src="../Proyectos/viviendaLT10/LAMINA 1 - IMPLANTACION.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
+            </div> 
+            <!-- Modal 07 Plano-->
+            <div class="modal fade" id="lamina01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/LAMINA 1 - IMPLANTACION.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+             <!-- ================= 08 Plano -->
+             <div class="col-12 col-lg-4 my-3 col_gallery">
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina02" >
+                    <img src="../Proyectos/viviendaLT10/LAMINA 2 - PLANTA.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
+            </div> 
+            <!-- Modal 08 Plano-->
+            <div class="modal fade" id="lamina02" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/LAMINA 2 - PLANTA.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+             <!-- ================= 09 Plano -->
+             <div class="col-12 col-lg-4 my-3 col_gallery">
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina03" >
+                    <img src="../Proyectos/viviendaLT10/LAMINA 3 - FRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
+            </div> 
+            <!-- Modal 09 Plano-->
+            <div class="modal fade" id="lamina03" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/LAMINA 3 - FRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ================= 10 Plano -->
+            <div class="col-12 col-lg-4 my-3 col_gallery">
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina04" >
+                    <img src="../Proyectos/viviendaLT10/LAMINA 4 - CONTRAFRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
+            </div> 
+            <!-- Modal 10 Plano-->
+            <div class="modal fade" id="lamina04" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/LAMINA 4 - CONTRAFRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ================= 11 Plano -->
+            <div class="col-12 col-lg-4 my-3 col_gallery">
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina05" >
+                    <img src="../Proyectos/viviendaLT10/LAMINA 5 - LATERAL DERECHO.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
+            </div> 
+            <!-- Modal 11 Plano-->
+            <div class="modal fade" id="lamina05" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/LAMINA 5 - LATERAL DERECHO.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ================= 12 Plano -->
+            <div class="col-12 col-lg-4 my-3 col_gallery">
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina06" >
+                    <img src="../Proyectos/viviendaLT10/LAMINA 6 - LATERAL IZQUIERDO.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
+            </div> 
+            <!-- Modal 12 Plano-->
+            <div class="modal fade" id="lamina06" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/LAMINA 6 - LATERAL IZQUIERDO.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+             <!-- ================= 13 Plano -->
+             <div class="col-12 col-lg-4 my-3 col_gallery">
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina07" >
+                    <img src="../Proyectos/viviendaLT10/LAMINA 7 - CORTE A.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
+            </div> 
+            <!-- Modal 13 Plano-->
+            <div class="modal fade" id="lamina07" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/LAMINA 7 - CORTE A.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+              <!-- ================= 14 Plano -->
+              <div class="col-12 col-lg-4 my-3 col_gallery">
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                    <img src="../Proyectos/viviendaLT10/lamina8.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </div>
+            </div> 
+            <!-- Modal 14 Plano-->
+            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content border-0">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-1">
+                            <img src="../Proyectos/viviendaLT10/lamina8.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
 
