--- a/Proyectos/viviendaMM.html
+++ b/Proyectos/viviendaMM.html
@@ -60,7 +60,7 @@
     <!-- Ficha técnica Vivienda MM -->
     <div class="container container_lt">
         <!-- Ficha -->
-        <div class="row row_ficha">
+        <div class="row row_ficha mx-0">
             <div class="col-12 col-lg-4 col_ficha">
                 <h1 class="ficha_title">Vivienda MM</h1>
                 <hr>
@@ -82,12 +82,12 @@
                 <hr>
             </div>
             <div class="col-12 col-lg-8 d-flex align-items-start">
-                <img src="../img/gallery/MM.jpg" class="img-fluid" alt="Vivienda MM">
+                <img src="../img/gallery/MM.jpg" alt="Vivienda MM" width="100%">
             </div>
         </div>
 
         <!-- Galeria -->
-        <div class="row my-5 gallery">
+        <div class="row my-5 mx-0">
 
              <!-- ============== 01 -->
             <div class="col-12 col-lg-4 col_gallery">
