--- a/press.html
+++ b/press.html
@@ -59,40 +59,132 @@
 
     <!-- Press -->
     <div class="container">
+
+        <div class="row my-5 justify-content-center">
+            <div class="col-12 col-lg-5">
+                <!-- Clarin ARQ -->
+                <a href="./Press/clarinARQ.html" class="image_container">
+                    <img class="image_img" src="./img/press/REVISTA CLARIN ARQ TAPA.jpg" alt="Clarín Arquitectura" width="100%" height="100%">
+                    <div class="img-fluid image_overlay image_overlay-solid">
+                        <h2 class="image_title">Clarín ARQ</h2>
+                    </div>
+                </a>
+            </div>
+            <div class="col-12 col-lg-5">
+                 <!-- Capba -->
+                <a href="./Press/capba.html" class="image_container">
+                    <img class="image_img" src="./img/press/REVISTA CAPBA TAPA.jpg" alt="Revista CAPBA" width="100%" height="100%">
+                    <div class="img-fluid image_overlay image_overlay-solid">
+                        <h2 class="image_title">Revista Capba</h2>
+                    </div>
+                </a>
+            </div>
+            <div class="col-12 col-lg-4">
+                <!-- Clarin.com -->
+               <div class="image_container">
+                   <img class="image_img" src="./img/press/clarin.com.jpg" alt="clarín digital">
+                   <div class="image_overlay image_overlay-solid">
+                       <h2 class="image_title">clarín.com</h2>
+                   </div>
+               </div>
+           </div>
+            <div class="col-12 col-lg-4">
+                 <!-- Revista Capba.com -->
+                <div class="image_container">
+                    <img class="image_img" src="./img/press/revista_capba.jpg" alt="Revista CAPBA Digital">
+                    <div class="image_overlay image_overlay-solid">
+                        <h2 class="image_title">Capba digital</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4">
+                 <!-- Contemporary Home Now -->
+                <div class="image_container">
+                    <img class="image_img" src="./img/press/contemporaryhomenow.jpg" alt="Revista CAPBA Digital">
+                    <div class="image_overlay image_overlay-solid">
+                        <h2 class="image_title">@contemporaryhomenow</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4">
+                <!-- Architecture Now -->
+                <div class="image_container">
+                    <img class="image_img" src="./img/press/architecturenow.jpg" alt="Revista CAPBA Digital">
+                    <div class="image_overlay image_overlay-solid">
+                        <h2 class="image_title">@architecturenow</h2>
+                    </div>
+                </div> 
+            </div>
+            <div class="col-12 col-lg-4">
+                <!-- Arquimais Canal -->
+                <div class="image_container">
+                    <img class="image_img" src="./img/press/arquimaiscanal.jpg" alt="Revista CAPBA Digital">
+                    <div class="image_overlay image_overlay-solid">
+                        <h2 class="image_title">@arquimaiscanal</h2>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
         <!-- Gallery Press -->
-        <div class="gallery_container">
+        <!-- <div class="gallery_container"> -->
             <!-- Clarin ARQ -->
-            <div class="image_container">
+            <!-- <a href="./Press/clarinARQ.html" class="image_container">
                 <img class="image_img" src="./img/press/REVISTA CLARIN ARQ TAPA.jpg" alt="Clarín Arquitectura">
                 <div class="image_overlay image_overlay-solid">
                     <h2 class="image_title">Clarín ARQ</h2>
                 </div>
-            </div>
+            </a> -->
 
             <!-- Clarin.com -->
-            <div class="image_container">
+            <!-- <div class="image_container">
                 <img class="image_img" src="./img/press/clarin.com.jpg" alt="clarín digital">
                 <div class="image_overlay image_overlay-solid">
                     <h2 class="image_title">clarín.com</h2>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Capba -->
-            <div class="image_container">
+            <!-- <a href="./Press/capba.html" class="image_container">
                 <img class="image_img" src="./img/press/REVISTA CAPBA TAPA.jpg" alt="Revista CAPBA">
                 <div class="image_overlay image_overlay-solid">
                     <h2 class="image_title">Revista Capba</h2>
                 </div>
-            </div>
+            </a> -->
 
             <!-- Revista Capba.com -->
-            <div class="image_container">
+            <!-- <div class="image_container">
                 <img class="image_img" src="./img/press/revista_capba.jpg" alt="Revista CAPBA Digital">
                 <div class="image_overlay image_overlay-solid">
                     <h2 class="image_title">Capba digital</h2>
                 </div>
-            </div>
-        </div>
+            </div> -->
+
+            <!-- Contemporary Home Now -->
+            <!-- <div class="image_container">
+                <img class="image_img" src="./img/press/contemporaryhomenow.jpg" alt="Revista CAPBA Digital">
+                <div class="image_overlay image_overlay-solid">
+                    <h2 class="image_title">@contemporaryhomenow</h2>
+                </div>
+            </div> -->
+
+            <!-- Architecture Now -->
+            <!-- <div class="image_container">
+                <img class="image_img" src="./img/press/architecturenow.jpg" alt="Revista CAPBA Digital">
+                <div class="image_overlay image_overlay-solid">
+                    <h2 class="image_title">@architecturenow</h2>
+                </div>
+            </div> -->
+
+            <!-- Arquimais Canal -->
+             <!-- <div class="image_container">
+                <img class="image_img" src="./img/press/arquimaiscanal.jpg" alt="Revista CAPBA Digital">
+                <div class="image_overlay image_overlay-solid">
+                    <h2 class="image_title">@arquimaiscanal</h2>
+                </div>
+            </div> -->
+        <!-- </div> -->
 
 
         <!-- Footer -->
