correcciones varias en detalles tipograficos. Y correccion en proyectos vivienda LT10 como prueba

--- a/Proyectos/viviendaMM.html
+++ b/Proyectos/viviendaMM.html
@@ -66,7 +66,7 @@
                 <hr>
                 <p>Proyecto y Dirección de obra – Ampliación.</p>
                 <p class="space">_</p>
-                <p>Lugar:<strong> Everlinks Club de golf, Luján, Buenos Aires, Argentina</strong></p>
+                <p>Lugar: Everlinks Club de golf, Luján, Buenos Aires, Argentina.</p>
                 <p>_</p>
                 <p>Fecha de Inicio: Noviembre 2019</p>
                 <p>_</p>
