--- a/Proyectos/wyndham.html
+++ b/Proyectos/wyndham.html
@@ -66,7 +66,7 @@
                 <hr>
                 <p>Anteproyecto – Propuesta de Ampliación e integración.</p>
                 <p class="space">_</p>
-                <p>Lugar:<strong> Nordelta, Buenos Aires, Argentina. </strong></p>
+                <p>Lugar: Nordelta, Buenos Aires, Argentina. </p>
                 <p>_</p>
                 <p>Fecha de la Propuesta: Octubre 2018.</p>
                 <hr>
