--- a/about.html
+++ b/about.html
@@ -23,8 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container navbar_container">
             <a class="navbar-brand logo" href="index.html">
-                <img class="logo_icon desktop" src="./img/logo-1.png" alt="Luciana Gotta">
-                <img class="logo_icon mobile" src="./img/logo-2.png" alt="Luciana Gotta">
+                <img class="logo_icon" src="./img/logo-1.png" alt="Luciana Gotta">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -72,7 +71,7 @@
                 </p>
                 <h5 class="about_title">About</h5>
                 <p class="about_text-p">
-                Diseñamos, construimos y administramos nuevas formas de habitar, acordes a nuestro tiempo, con el objetivo de lograrque la arquitectura y su entorno se vinculen de una manera diferente.
+                Diseñamos, construimos y administramos nuevas formas de habitar, acordes a nuestro tiempo, con el objetivo de lograr que arquitectura y entorno se vinculen de manera diferente.
                 </p>
 
                 <div class="button_container">
@@ -88,8 +87,8 @@
         <footer>
             <div class="row about_copy">
                 <div class="col-12 p-0 text-center">
-                    <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
-                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                    <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>luciana gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>luciana gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
                 </div>
             </div>
         </footer>
