--- a/press.html
+++ b/press.html
@@ -23,14 +23,13 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container navbar_container">
                 <a class="navbar-brand logo" href="index.html">
-                    <img class="logo_icon desktop" src="./img/logo-1.png" alt="Luciana Gotta">
-                    <img class="logo_icon mobile" src="./img/logo-2.png" alt="Luciana Gotta">
+                    <img class="logo_icon" src="./img/logo-1.png" alt="Luciana Gotta">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto ">
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">Home</a>
                     </li>
@@ -61,21 +60,25 @@
     <div class="container">
 
         <div class="row my-5 justify-content-center">
-            <div class="col-12 col-lg-5">
+            <div class="col-12 col-lg-5 clarinArq">
                 <!-- Clarin ARQ -->
-                <a href="./Press/clarinARQ.html" class="image_container">
-                    <img class="image_img" src="./img/press/REVISTA CLARIN ARQ TAPA.jpg" alt="Clarín Arquitectura" width="100%" height="100%">
-                    <div class="img-fluid image_overlay image_overlay-solid">
-                        <h2 class="image_title">Clarín ARQ</h2>
+                <a href="./Press/clarinARQ.html">
+                    <div class="image_container">
+                        <img class="image_img" src="./img/press/REVISTA CLARIN ARQ TAPA.jpg" alt="Clarín Arquitectura" width="100%" height="100%">
+                        <div class="image_overlay image_overlay-solid">
+                            <h2 class="image_title">Clarín ARQ</h2>
+                        </div>
                     </div>
                 </a>
             </div>
             <div class="col-12 col-lg-5">
                  <!-- Capba -->
-                <a href="./Press/capba.html" class="image_container">
-                    <img class="image_img" src="./img/press/REVISTA CAPBA TAPA.jpg" alt="Revista CAPBA" width="100%" height="100%">
-                    <div class="img-fluid image_overlay image_overlay-solid">
-                        <h2 class="image_title">Revista Capba</h2>
+                <a href="./Press/capba.html">
+                    <div class="image_container">
+                        <img class="image_img" src="./img/press/REVISTA CAPBA TAPA.jpg" alt="Revista CAPBA" width="100%" height="100%">
+                        <div class="image_overlay image_overlay-solid">
+                            <h2 class="image_title">Revista Capba</h2>
+                        </div>
                     </div>
                 </a>
             </div>
@@ -191,8 +194,8 @@
         <footer>
             <div class="row about_copy">
                 <div class="col-12 p-0 text-center">
-                    <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
-                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                    <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>luciana gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>luciana gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
                 </div>
             </div>
         </footer>
