--- a/proyect.html
+++ b/proyect.html
@@ -23,8 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container navbar_container">
                 <a class="navbar-brand logo" href="./index.html">
-                    <img class="logo_icon desktop" src="./img/logo-1.png" alt="Luciana Gotta">
-                    <img class="logo_icon mobile" src="./img/logo-2.png" alt="Luciana Gotta">
+                    <img class="logo_icon" src="./img/logo-1.png" alt="Luciana Gotta">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -78,14 +77,6 @@
                 </div>
             </a>
 
-            <!-- Vivienda SG -->
-             <a href="./Proyectos/viviendaSG.html" class="image_container">
-                <img class="image_img" src="./img/gallery/SG.jpg" alt="Vivienda SG">
-                <div class="image_overlay image_overlay-solid">
-                    <h2 class="image_title">Vivienda SG</h2>
-                </div>
-            </a>
-
             <!-- Hotel Wyndham -->
              <a href="./Proyectos/wyndham.html" class="image_container">
                 <img class="image_img" src="./img/gallery/wyndham.jpg" alt="Hotel Wyndham">
@@ -93,6 +84,15 @@
                     <h2 class="image_title">Hotel Wyndham</h2>
                 </div>
             </a>
+
+             <!-- Vivienda SG -->
+             <a href="./Proyectos/viviendaSG.html" class="image_container">
+                <img class="image_img" src="./img/gallery/SG.jpg" alt="Vivienda SG">
+                <div class="image_overlay image_overlay-solid">
+                    <h2 class="image_title">Vivienda SG</h2>
+                </div>
+            </a>
+
         </div>
 
 
@@ -100,8 +100,8 @@
         <footer>
             <div class="row about_copy">
                 <div class="col-12 p-0 text-center">
-                    <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
-                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                    <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>luciana gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>luciana gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
                 </div>
             </div>
         </footer>
