--- a/Proyectos/viviendaLT10.html
+++ b/Proyectos/viviendaLT10.html
@@ -60,13 +60,13 @@
     <!-- Ficha técnica Vivienda LT10 -->
     <div class="container container_lt">
         <!-- Ficha -->
+        <h1 class="ficha_title">Vivienda LT10</h1>
         <div class="row row_ficha">
             <div class="col-12 col-lg-4 col_ficha">
-                <h1 class="ficha_title">Vivienda LT10</h1>
                 <hr>
                 <p>Proyecto y Dirección de obra</p>
                 <p class="space">_</p>
-                <p>Lugar: La Concepción Club de campo, <strong> Luján, Buenos Aires, Argentina.</strong></p>
+                <p>Lugar: La Concepción Club de campo, Luján, Buenos Aires, Argentina.</p>
                 <p>_</p>
                 <p>Fecha de Inicio: Abril 2018</p>
                 <p>_</p>
@@ -79,7 +79,7 @@
                 <p>Fotógrafo:  Juan Ignacio Giraudo. </p>
                 <hr>
             </div>
-            <div class="col-12 col-lg-8 d-flex align-items-start">
+            <div class="col-12 col-lg-8 d-flex align-items-center">
                 <img src="../img/gallery/viviendalt10_min.jpg" class="img-fluid" alt="Vivienda LT10">
             </div>
         </div>
@@ -88,7 +88,7 @@
         <div class="row my-5 gallery">
 
              <!-- ============== 01 -->
-            <div class="col-12 col-lg-4 col_gallery">
+            <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda01">
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/1.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -108,7 +108,7 @@
             </div>
            
             <!-- =============== 02 -->
-            <div class="col-12 col-lg-4 col_gallery">
+            <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda02" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/2.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -129,7 +129,7 @@
             </div>
 
              <!-- =============== 03 -->
-            <div class="col-12 col-lg-4 col_gallery"> 
+            <div class="col-12 col_gallery"> 
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda03" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/3.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -150,7 +150,7 @@
             </div>
 
             <!-- ================ 04 -->
-            <div class="col-12 col-lg-4 col_gallery">
+            <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda04" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/4.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -171,7 +171,7 @@
             </div>
 
             <!-- ================ 05 -->
-            <div class="col-12 col-lg-4 col_gallery">
+            <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda05" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/5.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -191,7 +191,7 @@
             </div>
 
             <!-- ================ 06 -->
-            <div class="col-12 col-lg-4 col_gallery">
+            <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda06" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/6.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -211,7 +211,7 @@
             </div>
 
             <!-- ================= 07 Plano -->
-            <div class="col-12 col-lg-4 col_gallery">
+            <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina01" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 1 - IMPLANTACION.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -231,7 +231,7 @@
             </div>
 
              <!-- ================= 08 Plano -->
-             <div class="col-12 col-lg-4 col_gallery">
+             <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina02" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 2 - PLANTA.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -251,7 +251,7 @@
             </div>
 
              <!-- ================= 09 Plano -->
-             <div class="col-12 col-lg-4 col_gallery">
+             <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina03" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 3 - FRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -271,7 +271,7 @@
             </div>
 
             <!-- ================= 10 Plano -->
-            <div class="col-12 col-lg-4 col_gallery">
+            <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina04" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 4 - CONTRAFRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -291,7 +291,7 @@
             </div>
 
             <!-- ================= 11 Plano -->
-            <div class="col-12 col-lg-4 col_gallery">
+            <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina05" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 5 - LATERAL DERECHO.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -311,7 +311,7 @@
             </div>
 
             <!-- ================= 12 Plano -->
-            <div class="col-12 col-lg-4 col_gallery">
+            <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina06" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 6 - LATERAL IZQUIERDO.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -331,7 +331,7 @@
             </div>
 
              <!-- ================= 13 Plano -->
-             <div class="col-12 col-lg-4 col_gallery">
+             <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina07" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 7 - CORTE A.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
@@ -351,7 +351,7 @@
             </div>
 
               <!-- ================= 14 Plano -->
-              <div class="col-12 col-lg-4 col_gallery">
+              <div class="col-12 col_gallery">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/lamina8.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </div>
