--- a/Proyectos/viviendaSG.html
+++ b/Proyectos/viviendaSG.html
@@ -68,7 +68,7 @@
                 <p class="space">_</p>
                 <p>Colaboradora: Sandra Girado.</p>
                 <p>_</p>
-                <p>Lugar:<strong> La Concepción Club de campo, Luján, Buenos Aires, Argentina. </strong></p>
+                <p>Lugar: La Concepción Club de campo, Luján, Buenos Aires, Argentina.</p>
                 <p>_</p>
                 <p>Fecha de Inicio: Diciembre 2017</p>
                 <p>_</p>
@@ -374,12 +374,12 @@
 
             <!-- ================= 16 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina09" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/image020.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 16-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina09" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -394,12 +394,12 @@
 
             <!-- ================= 17 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina10" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/image021.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 17-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina10" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -414,12 +414,12 @@
 
             <!-- ================= 18 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina11" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/image022.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 18-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina11" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -434,12 +434,12 @@
 
             <!-- ================= 19 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina12" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/lamina2.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 19-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina12" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -454,12 +454,12 @@
 
             <!-- ================= 20 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina13" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/lamina3.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 20-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina13" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -474,12 +474,12 @@
 
             <!-- ================= 21 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina14" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/lamina4.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 21-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina14" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -494,12 +494,12 @@
 
             <!-- ================= 22 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina15" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/lamina5.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 22-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina15" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -514,12 +514,12 @@
 
             <!-- ================= 23 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina16" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/lamina6.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 23-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina16" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -534,12 +534,12 @@
 
             <!-- ================= 24 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina17" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/lamina7.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 24-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina17" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -554,12 +554,12 @@
 
             <!-- ================= 25 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina18" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/lamina8.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 25-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina18" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -574,12 +574,12 @@
 
             <!-- ================= 25 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina19" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/lamina9.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 25-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina19" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -594,12 +594,12 @@
 
             <!-- ================= 26 -->
             <div class="col-12 col-lg-4 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina20" >
                     <img class="img_gallery" src="../Proyectos/viviendaSG/lamina10.jpg" alt="Vivienda SG" width="100%" height="100%">
                 </div>
             </div> 
             <!-- Modal 26-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="lamina20" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
