modificando estructura de galeria de proyecto lt10 y agregando memoria descriptiva

--- a/Proyectos/viviendaLT10.html
+++ b/Proyectos/viviendaLT10.html
@@ -84,6 +84,23 @@
             </div>
         </div>
 
+        <div class="row memoria">
+            <p>
+                La vivienda se implanta en un terreno ubicado en el Club de Campo La Concepción, en la ciudad de Luján, provincia de Buenos Aires. 
+            </p>
+            <p>
+                El proyecto debía contemplar ciertos requisitos: “cerrarse” en el frente para una mayor privacidad y “abrirse” en su interior hacia el parque, para vincular todos sus espacios con el verde. Además, debía prever una posible ampliación futura de una habitación sin que esto implicará grandes modificaciones, estos requerimientos fueron el punto de partida del proyecto que pretendía una vivienda simple y sin gran desarrollo en superficie. 
+            </p>
+                
+            <p>
+                El resultado, un esquema en planta baja que asegura la relación a través de todos los sentidos con la naturaleza. Área privada y pública se encuentran bien delimitadas cada una en un extremo de la vivienda, en el centro el hall y las dos expansiones, refuerzan esta sectorización y ordenan la relación entre ambas. Los vacíos son los protagonistas, permiten el ingreso de luz y ventilación además de acercar el verde mejorando sustancialmente la calidad del espacio interior. Además, la expansión alineada con las habitaciones va a ser la encargada de absolver la ampliación en un futuro, en caso de ser necesario. En el área privada, dormitorios y baños se ubican estratégicamente, los primeros en relación directa con el parque y los otros en la línea de frente a la calle, con aventanamientos pequeños en fachada aseguran la privacidad. Los espacios públicos, más amplios y flexibles, se vinculan entre sí dando fluidez área. 
+            </p>
+            
+            <p>
+                En conclusión, la vivienda cumple con las premisas planteadas, logra anular la relación con el espacio público para vincularse con su propio verde y generar una gran calidad espacial en el interior.
+            </p>
+        </div>
+
         <!-- Galeria -->
         <div class="row my-5 gallery">
 
