agregando sombra inferior al nav en moile, me falta sacarla del desktop

--- a/Proyectos/viviendaMM.html
+++ b/Proyectos/viviendaMM.html
@@ -23,8 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container navbar_container">
             <a class="navbar-brand logo" href="./index.html">
-            <img class="logo_icon desktop" src="../img/logo-1.png" alt="Luciana Gotta">
-            <img class="logo_icon mobile" src="../img/logo-2.png" alt="Luciana Gotta">
+            <img class="logo_icon" src="../img/logo-1.png" alt="Luciana Gotta">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
