--- a/Proyectos/wyndham.html
+++ b/Proyectos/wyndham.html
@@ -18,10 +18,10 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header">
+    <header class="header fixed-top">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container navbar_container">
+        <div class="container-fluid navbar_container">
             <a class="navbar-brand logo" href="../index.html">
             <img class="logo_icon" src="../img/logo-1.png" alt="Luciana Gotta">
             </a>
