--- a/press.html
+++ b/press.html
@@ -18,10 +18,10 @@
 <body>
 
     <!-- Header -->
-    <header class="header">
+    <header class="header fixed-top">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container navbar_container">
+            <div class="container-fluid navbar_container">
                 <a class="navbar-brand logo" href="index.html">
                     <img class="logo_icon" src="./img/logo-1.png" alt="Luciana Gotta">
                 </a>
@@ -57,7 +57,7 @@
     </header>
 
     <!-- Press -->
-    <div class="container">
+    <div class="container container_section">
 
         <div class="row my-5 justify-content-center">
             <div class="col-12 col-lg-5 clarinArq">
