Modificación galeria de imagenes de cada proyecto y agregado de memoria descriptiva

--- a/Proyectos/viviendaLT10.html
+++ b/Proyectos/viviendaLT10.html
@@ -85,6 +85,7 @@
             </div>
         </div>
 
+        <!-- Memoria descriptiva -->
         <div class="row memoria">
             <p>
                 La vivienda se implanta en un terreno ubicado en el Club de Campo La Concepción, en la ciudad de Luján, provincia de Buenos Aires. 
