--- a/proyect.html
+++ b/proyect.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./proyect.html">Proyectos</a>
+                    <a class="nav-link active" href="./proyect.html">Proyectos</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="./press.html">Press</a>
