corrigiendo detalles en press y about

--- a/about.html
+++ b/about.html
@@ -75,8 +75,10 @@
                 </p>
 
                 <div class="button_container">
-                    <button class="btn btn-outline-dark button_container-text desktop" type="button">Contact</button>
-                    <button class="btn btn-block btn-outline-dark button_container-text mobile" type="button">Contact</button>
+                    <a class="enlace_button" target="_blank" href="http://wa.me/5491167993231" >
+                        <button class="btn btn-outline-dark button_container-text desktop" type="button">Contact</button>
+                        <button class="btn btn-block btn-outline-dark button_container-text mobile" type="button">Contact</button>
+                    </a>
                     <a href="https://www.instagram.com/lucianagottaarq/" class="button_container-iconContainer" target="_blank"><i class="fab fa-instagram button_container-icon"></i></a>
                 </div>
             </div>
