pasando a español los item del nav

--- a/about.html
+++ b/about.html
@@ -31,16 +31,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                <a class="nav-link" href="./index.html">Home</a>
+                <a class="nav-link" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="./about.html">About</a>
+                <a class="nav-link active" href="./about.html">Sobre mi</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./proyect.html">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="./press.html">Press</a>
+                <a class="nav-link" href="./press.html">Prensa</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle px-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -76,8 +76,8 @@
 
                 <div class="button_container">
                     <a class="enlace_button" target="_blank" href="http://wa.me/5491167993231" >
-                        <button class="btn btn-outline-dark button_container-text desktop" type="button">Contact</button>
-                        <button class="btn btn-block btn-outline-dark button_container-text mobile" type="button">Contact</button>
+                        <button class="btn btn-outline-dark button_container-text desktop" type="button">Contacto</button>
+                        <button class="btn btn-block btn-outline-dark button_container-text mobile" type="button">Contacto</button>
                     </a>
                     <a href="https://www.instagram.com/lucianagottaarq/" class="button_container-iconContainer" target="_blank"><i class="fab fa-instagram button_container-icon"></i></a>
                 </div>
