--- a/proyect.html
+++ b/proyect.html
@@ -31,16 +31,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link" href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./about.html">About</a>
+                    <a class="nav-link" href="./about.html">Sobre mi</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link active" href="./proyect.html">Proyectos</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./press.html">Press</a>
+                    <a class="nav-link" href="./press.html">Prensa</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle px-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
