navegacion con hover

--- a/about.html
+++ b/about.html
@@ -50,6 +50,7 @@
                       <li><a class="dropdown-item" href="https://www.instagram.com/lucianagottaarq/" target="_blank">Instagram</a></li>
                     </ul>
                 </li>
+                <div class="animation start-home"></div>
             </ul>
             </div>
         </div>
