--- a/Press/clarinARQ.html
+++ b/Press/clarinARQ.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="../about.html">Sobre mi</a>
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="../proyect.html">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="../press.html">Prensa</a>
+                <a class="nav-link active" aria-current="page" href="../press.html">Prensa</a>
                 </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle px-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
