--- a/Proyectos/viviendaMM.html
+++ b/Proyectos/viviendaMM.html
@@ -33,13 +33,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="../about.html">Sobre mi</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="../proyect.html">Proyectos</a>
+                <a class="nav-link active" href="../proyect.html">Proyectos</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="../press.html">Prensa</a>
